--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Você já usa o GitHub diariamente para desenvolver os exercícios, certo? Agora, para desenvolver os projetos, você deverá seguir as instruções a seguir. Fique atento a cada passo, e se tiver qualquer dúvida, nos envie por _Slack_! #vqv 🚀",
   "main": "script.js",
   "scripts": {
+    "start": "server",
     "test": "cypress run",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js",
     "lint:styles": "stylelint **/*.css --config .stylelintrc.json --ignore-disables --allow-empty-input",
@@ -20,6 +21,7 @@
   },
   "homepage": "https://github.com/betrybe/sd-0x-block10-project-shopping-cart#readme",
   "dependencies": {
+    "@cypress/xvfb": "^1.2.4",
     "cypress": "4.3.0",
     "cypress-multi-reporters": "1.2.4",
     "eslint": "6.8.0",
